# docker_ros_workspace

./: README.md
turtlebot_nav/: package.xml  setup.py
turtlebot_nav/config/: nav.rviz  nav2_params.yaml  table_map.yaml
turtlebot_nav/launch/: navigation_bringup.launch.py
turtlebot_nav/tanu_workspace/: random_navigator.py  readme.md  table_map.pgm
turtlebot_nav/tanu_workspace_april30/: ArmProximity.py  cmd_vel_relay.py  frames_2026-04-29_17.17.10.gv  goal_extractor.py  nav2_params.yaml  random_navigator.py  readme.md  test.py
ur_test/: CMakeLists.txt  package.xml
ur_test/launch/: demonstration_recorder.py  joy_teleop.launch.py  move_ur3_launch.launch.py  record_demonstration.launch.py
ur_test/src/: goal_extractor.py  joy_teleop.py  move_ur3.py  replay_demo.py
